welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:10: error: not found: value poseBiscut
	poseBiscut();
        ^